Fixed swagger links
